--- a/html/index.html
+++ b/html/index.html
@@ -3,12 +3,18 @@
    <head>
       <meta charset="UTF-8">
       <title>Block Tor</title>
-      <style type="text/css" src="main.css"></style>
+      <link href="./bootstrap.min.css" rel="stylesheet">
+      <link href="./bootstrap-theme.min.css" rel="stylesheet">
+      <link href="main.css" rel="stylesheet">
    </head>
    <body>
-      <div id="main"></div>
-      <div ng-controller="BlockTorController as blockTor">{{ blockTor.name }}</div>
+      <div class="heading"></div>
+      <div class="container theme-showcase" role="main">
+         <div id="main" class="jumbotron"></div>
+         <div ng-controller="BlockTorController as blockTor">{{ blockTor.name }}</div>
+      </div>
       <script src="./jquery-3.1.1.min.js"></script>
+      <script src="./bootstrap.min.js"></script>
       <script src="./angular.min.js"></script>
       <script src="./main.js"></script>
    </body>
