--- a/html/index.html
+++ b/html/index.html
@@ -38,6 +38,7 @@
       <script src="./jquery-3.1.1.min.js"></script>
       <script src="./bootstrap.min.js"></script>
       <script src="./angular.min.js"></script>
+      <script src="../js/reader.js"></script>
       <script src="./main.js"></script>
    </body>
 </html>
