--- a/html/live-index.html
+++ b/html/live-index.html
@@ -11,7 +11,7 @@
       <div class="heading"></div>
       <div class="container theme-showcase" role="main">
          <div id="logo" class="jumbotron center">
-            <img class="logo" src="https://davealbert.github.io/blocktor/html/logo.jpg" alt="" />
+            <img class="logo" src="https://davealbert.github.io/blocktor/html/logo.png" alt="" />
          </div>
          <div ng-controller="BlockTorController as blockTor">
             <h1 class="center">Team BlockTor</h1>
