--- a/html/index.html
+++ b/html/index.html
@@ -28,9 +28,10 @@
             <h1 class="loading center">Loading ...</h1>
             <ul class="hidden">
               <li ng-repeat="torrent in blockTor.torrentList()">
+                 <img src="good.png" class="magnet" ng-show="true" alt="" title="Good Reputation"/>
                  <a href="magnet:?xt=urn:btih:{{ torrent.id }}">
                  <img src="magnet.png" class="magnet" alt="" />
-                    {{ torrent.name }}</a> :
+                    {{ torrent.name }}</a> -
                  <span>{{ torrent.description }}</span>
               </li>
             </ul>
