--- a/html/redirect.html
+++ b/html/redirect.html
@@ -7,7 +7,8 @@
    <body onload="redir();">
       <script type="text/javascript">
             function redir() {
-               window.location.href="https://elendirx.github.io/web2web-gateway/#/87f462d92c03bdf476f69c96c1e51a77ceee45f2";
+               window.location.href="https://davealbert.github.io/blocktor/html/index.html";
+               <!--window.location.href="https://elendirx.github.io/web2web-gateway/#/87f462d92c03bdf476f69c96c1e51a77ceee45f2";-->
             }
       </script>
    </body>
